# dsa4264-project-grp-5

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  __init__.py  constants.py  helper.py  main.py  requirements.txt  schemas.py  tools.py
data_processing/: create_clusters.ipynb  hdb_resale_cleaning.ipynb  join_data.ipynb  mall_get_lat_lon.py  onemapapi_key_generator.py  rail-data.ipynb  school-data.ipynb
docs/: report.html  report.md
docs/appendix/: appendix.md
models/: stat.ipynb
models/did/: diffdiff_notebook_helpers.py
models/did/pooled/: did_goodschool_pooled_12schools.ipynb  did_goodschools_pooled_01schools.ipynb  did_normalschools_pooled_01schools.ipynb
models/did/unpooled/: DID_goodschool_unpooled.ipynb  DID_goodschool_unpooled_12.ipynb  DID_goodschool_unpooled_12_1to2km_2schools.ipynb
models/rdd/: paths.py
models/rdd/core/: features.py  modeling.py
models/rdd/good_schools/: sample.py
models/rdd/good_schools/common/: concordance.py  contamination.py  pilot.py
models/rdd/good_schools/results/0_to_1/: 00_workflow_coefficients_100m.csv  00_workflow_coefficients_25m.csv  00_workflow_coefficients_combined.csv
models/rdd/good_schools/results/1_to_2/: 00_workflow_coefficients_100m.csv  00_workflow_coefficients_25m.csv  00_workflow_coefficients_combined.csv
models/rdd/normal_schools/results/: 00_pooled_coefficients.csv
